@@ -13,31 +13,20 @@ import java.awt.event.*;
 import javax.swing.*;
 import java.util.*;
 
-public class LaneView implements Observer, ActionListener {
+public class LaneView implements Observer, ActionListener{
 
-	private int roll;
-	private boolean initDone = true;
-
-	JFrame frame;
-	Container cpanel;
-	Vector bowlers;
-	int cur;
-	Iterator bowlIt;
-
-	JPanel[][] balls;
-	JLabel[][] ballLabel;
-	JPanel[][] scores;
-	JLabel[][] scoreLabel;
-	JPanel[][] ballGrid;
-	JPanel[] pins;
-
-	JButton maintenance;
-	Lane lane;
+	private boolean initDone;
+	private JFrame frame;
+	private Container cpanel;
+	private Vector bowlers;
+    private JLabel[][] ballLabel;
+    private JLabel[][] scoreLabel;
+    private JButton maintenance;
+	private Lane lane;
 
 	public LaneView(Lane lane, int laneNum) {
 
 		this.lane = lane;
-
 		initDone = true;
 		frame = new JFrame("Lane " + laneNum + ":");
 		cpanel = frame.getContentPane();
@@ -71,12 +60,12 @@ public class LaneView implements Observer, ActionListener {
 
 		panel.setLayout(new GridLayout(0, 1));
 
-		balls = new JPanel[numBowlers][23];
+        JPanel[][] balls = new JPanel[numBowlers][23];
 		ballLabel = new JLabel[numBowlers][23];
-		scores = new JPanel[numBowlers][10];
+        JPanel[][] scores = new JPanel[numBowlers][10];
 		scoreLabel = new JLabel[numBowlers][10];
-		ballGrid = new JPanel[numBowlers][10];
-		pins = new JPanel[numBowlers];
+        JPanel[][] ballGrid = new JPanel[numBowlers][10];
+        JPanel[] pins = new JPanel[numBowlers];
 
 		for (int i = 0; i != numBowlers; i++) {
 			for (int j = 0; j != 23; j++) {
@@ -149,7 +138,7 @@ public class LaneView implements Observer, ActionListener {
 				JPanel buttonPanel = new JPanel();
 				buttonPanel.setLayout(new FlowLayout());
 
-				Insets buttonMargin = new Insets(4, 4, 4, 4);
+                new Insets(4, 4, 4, 4);
 
 				maintenance = new JButton("Maintenance Call");
 				JPanel maintenancePanel = new JPanel();
@@ -170,34 +159,34 @@ public class LaneView implements Observer, ActionListener {
 				for (int i = 0; i <= le.getFrameNum() - 1; i++) {
 					if (lescores[k][i] != 0)
 						scoreLabel[k][i].setText(
-								(new Integer(lescores[k][i])).toString());
+								(Integer.valueOf(lescores[k][i])).toString());
 				}
 				for (int i = 0; i < 21; i++) {
-					if (((int[]) ((HashMap) le.getScore())
+					if (((int[]) le.getScore()
 							.get(bowlers.get(k)))[i]
 							!= -1)
-						if (((int[]) ((HashMap) le.getScore())
+						if (((int[]) le.getScore()
 								.get(bowlers.get(k)))[i]
 								== 10
 								&& (i % 2 == 0 || i == 19))
 							ballLabel[k][i].setText("X");
 						else if (
 								i > 0
-										&& ((int[]) ((HashMap) le.getScore())
+										&& ((int[]) le.getScore()
 										.get(bowlers.get(k)))[i]
-										+ ((int[]) ((HashMap) le.getScore())
+										+ ((int[]) le.getScore()
 										.get(bowlers.get(k)))[i
 										- 1]
 										== 10
 										&& i % 2 == 1)
 							ballLabel[k][i].setText("/");
-						else if (((int[]) ((HashMap) le.getScore()).get(bowlers.get(k)))[i] == -2) {
+						else if (((int[]) le.getScore().get(bowlers.get(k)))[i] == -2) {
 
 							ballLabel[k][i].setText("F");
 						} else
 							ballLabel[k][i].setText(
-									(new Integer(((int[]) ((HashMap) le.getScore())
-											.get(bowlers.get(k)))[i]))
+									(Integer.valueOf(((int[]) le.getScore()
+                                            .get(bowlers.get(k)))[i]))
 											.toString());
 				}
 			}
@@ -219,5 +208,6 @@ public class LaneView implements Observer, ActionListener {
 	@Override
 	public void receiveEvent(ControlDeskEvent ce) {
 	}
+
 }
 
